--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,15 +2,14 @@ name: Update mst_category JSON
 
 on:
   schedule:
-    # Runs every 5 minutes
-    - cron: '*/5 * * * *'
-
-permissions:
-  contents: write  # Allows the bot to push changes
+    - cron: '*/5 * * * *'  # Every 5 minutes
 
 jobs:
   update-json:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: write  # Ensure the GITHUB_TOKEN has write permissions to the repository
 
     steps:
     - name: Checkout code
@@ -36,6 +35,6 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add mst_category.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
-        git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+        git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
