--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Run the script
       run: |
         python update_mst_category.py
-        python update_mst_sub_category.py
+        python update_mst_subcategory.py
 
     - name: Commit and push changes
       run: |
