--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -36,7 +36,7 @@ jobs:
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add mst_category.json
-        git add mst_subcategory.json
+        git add mst_sub_category.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
