--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -30,6 +30,7 @@ jobs:
       run: |
         python update_mst_category.py
         python update_mst_subcategory.py
+        python update_mst_product.py
 
     - name: Commit and push changes
       run: |
@@ -37,6 +38,7 @@ jobs:
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
         git add mst_category.json
         git add mst_sub_category.json
+        git add mst_product.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
