--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -31,6 +31,7 @@ jobs:
         python update_mst_category.py
         python update_mst_subcategory.py
         python update_mst_product.py
+        python update_mst_attribute.py
 
     - name: Commit and push changes
       run: |
@@ -39,6 +40,7 @@ jobs:
         git add mst_category.json
         git add mst_sub_category.json
         git add mst_product.json
+        git add mst_attribute.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
