--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -32,6 +32,7 @@ jobs:
         python update_mst_subcategory.py
         python update_mst_product.py
         python update_mst_attribute.py
+        python update_mst_banner.py
 
     - name: Commit and push changes
       run: |
@@ -41,6 +42,7 @@ jobs:
         git add mst_sub_category.json
         git add mst_product.json
         git add mst_attribute.json
+        git add mst_banner.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
