--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -36,6 +36,7 @@ jobs:
         python update_mst_bookedproducts.py
         python update_mst_bookings.py
         python update_mst_cart.py
+        python update_mst_chats.py
 
     - name: Commit and push changes
       run: |
@@ -49,6 +50,7 @@ jobs:
         git add mst_bookedproducts.json
         git add mst_bookings.json
         git add mst_cart.json
+        git add mst_chat.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
