--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -37,6 +37,7 @@ jobs:
         python update_mst_bookings.py
         python update_mst_cart.py
         python update_mst_chats.py
+        python update_mst_cms.py
 
     - name: Commit and push changes
       run: |
@@ -51,6 +52,7 @@ jobs:
         git add mst_bookings.json
         git add mst_cart.json
         git add mst_chat.json
+        git add mst_cms.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
