--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -43,6 +43,7 @@ jobs:
         python update_mst_shop.py
         python update_mst_userAddress.py
         python update_mst_users.py
+        python update_mst_wishlist.py
 
     - name: Commit and push changes
       run: |
@@ -63,6 +64,7 @@ jobs:
         git add mst_shop.json
         git add mst_useraddress.json
         git add mst_users.json
+        git add mst_wishlist.json
         git commit -m "Update mst_category data for $(date +'%Y-%m-%d')"
         git push https://github.com/${{ github.repository }}.git HEAD:main
       env:
